examples/test/testpolicy3926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3926
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key37: value2
      key21: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value16
          key12: value33
          key3: value16
      podSelector:
        matchLabels:
          key9: value9
          key19: value0
          key4: value19
